--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@
 /* 1. Defaults & Reset of specific styles across browsers */
 /*------------------------------------------------------------------------------------------*/
 
+body {
+    background-color: #FCFFFF;
+}
+
 *, *:before, *:after {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -318,7 +322,7 @@ section {
 }
 
 #header ul {
-    text-align: center;
+    text-align: right;
 }
 
 #header li {
@@ -345,6 +349,16 @@ section {
     margin-right: 10px;
     font-weight: 900;
     padding: 0;
+}
+
+.header-image {
+    text-align: right;
+}
+
+.header-image img{
+    border-radius: 50%;
+    height: 55vh;
+    width: 55vh;
 }
 
 #logo h2 {
@@ -2126,6 +2140,10 @@ blockquote {
         padding-left: 0;
     }
 
+    .header-image {
+        display: none!important;
+    }
+
     /*-----------------Header Elements-----------------*/
     #header .row {
         padding: 0 15px !important;
@@ -2197,6 +2215,9 @@ blockquote {
 ===============================*/
 @media (min-width: 480px) and (max-width: 767px) {
 
+    .header-image {
+        display: none!important;
+    }
     #wrapper {
         margin:0;
         padding:0;
